PYAPI: CompositorNodeSwitchView have the wrong api docs #51863

Closed
opened 2017-06-21 21:49:00 +02:00 by Aaron Carlisle · 4 comments
Member

System Information
Windows 10
AMD APU

Blender Version
Broken: 2.78.5
Worked: Never

Short description of error
https:*docs.blender.org/api/current/bpy.types.CompositorNodeSwitch.html and https:*docs.blender.org/api/current/bpy.types.CompositorNodeSwitchView.html offer the same docs. The switch view one must be wrong.

**System Information** Windows 10 AMD APU **Blender Version** Broken: 2.78.5 Worked: Never **Short description of error** https:*docs.blender.org/api/current/bpy.types.CompositorNodeSwitch.html and https:*docs.blender.org/api/current/bpy.types.CompositorNodeSwitchView.html offer the same docs. The switch view one must be wrong.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Dalai Felinto was assigned by Aaron Carlisle 2017-06-21 21:49:25 +02:00

This issue was referenced by blender/blender@be4b5551c7

This issue was referenced by blender/blender@be4b5551c7a4f0f5be1d6fc55c87c890ee0ddb27

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#51863
No description provided.